feat!: v1.0.0 (#5)
* chore: profile ui updates

* fix: return roles for get all users endpoint

* feat: admin dashboard

* fix: admin dashboard restrictions

- only display admin dashboard if the user has admin permissions
- return forbidden page if a non admin user attempts to view the admin dashboard

* feat: custom Input component + input errors

* feat: frontend roles integration

* chore: context menu component

* feat: delete user

- delete user endpoint (DELETE /api/users/{id}

* chore: delete user frontend integration

* refactor: improve frontend modularity and edit user roles

* feat: frontend integration of delete user role

* feat: alerts

* refactor: use config for token and code lifespan definitions

* chore: validation helper with go-playground/validator

* chore: add validation to all form like requests

* docs: create README with instructions

* feat: github account linking

* chore: include connections array in user response

* docs: LinkGithub and GithubCallback docs

* feat: unlink github

* fix: missing config in vercel builds

* chore: serve config.json inside the binary

* chore: use REDIS_URL environment variable for consistency with vercel

* fix: use redis.ParseURL

* chore: profile frontend improvements

related PR #4


* chore: navigate to home with logo

* chore: validation handling for signup frontend

---------
